<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/white"
    tools:context=".ui.fragment.us.UsFragment">

    <TextView
        android:id="@+id/tv_title_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textColor="@color/title_search"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_friend"
        />

    <TextView
        android:id="@+id/tv_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/friend"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_title_search"
        />
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="35dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/imageview_back_to_home"
        android:src="@drawable/img_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_search" />

    <TextView
        android:id="@+id/tv_integrantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_light"
        android:text="Integrantes"
        android:textColor="@color/title_search"
        android:textSize="36sp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guide_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_friend" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_members"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/contains_1_image_of_a_member"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_rv_us"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide_line"
        />

    <TextView
        android:id="@+id/tv_about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/comfortaa_regular"
        android:text="@string/about_us"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/rv_members"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_about_us"
        android:layout_width="match_parent"
        android:layout_height="233dp"
        android:contentDescription="@string/contains_photos_about_us"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_rv_about_us"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_about_us"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_2"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/img_back"
            android:contentDescription="@string/imagen" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20sp"
            android:text="@string/volver"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
