<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.home.presenter.HomeFragment">

    <TextView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/search"
        android:textColor="@color/btn_register"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/friend"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/search"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_random"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="45dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_friend"
        app:layout_constraintEnd_toStartOf="@+id/cv_puppies"
        app:layout_constraintWidth_default="spread">

        <TextView
            android:id="@+id/tv_random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/aleatorio"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_puppies"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="45dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toEndOf="@+id/cv_random"
        app:layout_constraintTop_toBottomOf="@+id/tv_friend"
        app:layout_constraintEnd_toStartOf="@+id/cv_us"
        app:layout_constraintWidth_default="spread">

        <TextView
            android:id="@+id/tv_puppies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/perritos"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_us"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="45dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toEndOf="@+id/cv_puppies"
        app:layout_constraintTop_toBottomOf="@+id/tv_friend"
        app:layout_constraintEnd_toStartOf="@+id/cv_search"
        app:layout_constraintWidth_default="spread">

        <TextView
            android:id="@+id/tv_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nosotros"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_search"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/btn_register"
        app:cardCornerRadius="45dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toEndOf="@+id/cv_us"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_friend"
        app:layout_constraintWidth_default="spread">

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buscar"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_adopt_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:text="@string/adoptame"
        android:textColor="@color/btn_register"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_random" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_home"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_adopt_me"
        tools:listitem="@layout/item_rv_home" />


</androidx.constraintlayout.widget.ConstraintLayout>